--- a/data/spotlight1.yml
+++ b/data/spotlight1.yml
@@ -6,5 +6,5 @@ content: |
   This is a <strong>Spotlight</strong> element, and it's generally used &ndash; as its name implies &ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-spotlight">details</a>).
 button: 
   label: "Learn More"
-  link: "#"
+  link: "post/2020-12-01-r-rmarkdown"
 image: "images/spotlight01.jpg"
