--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: 
+baseurl: https://benontrack.netlify.app/
 languageCode: en-us
 title: Parsa Hugo | Personal Blog Template
 theme: parsa-hugo
