--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,8 @@ params:
       - link: plugins/bootstrap/bootstrap.min.css
       - link: plugins/slick/slick.css
       - link: plugins/themify-icons/themify-icons.css
-      - link : plugins/blueimp/blueimp-gallery.min.css
+      - link: plugins/blueimp/blueimp-gallery.min.css
+      - link: plugins/socialsharing/socialsharing.css
     js:
       - link: plugins/jQuery/jquery.min.js
       - link: plugins/bootstrap/bootstrap.min.js
